--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,6 @@ before_install:
 
 before_script:
     - "export PATH=`pwd`/elixir/bin:$PATH"
-    
+    - mix do deps.get
 script:
-    - "MIX_ENV=test mix test"
+    - mix test
