--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,6 @@ before_install:
 
 before_script:
     - "export PATH=`pwd`/elixir/bin:$PATH"
-    - mix do deps.get
+    - MIX_ENV=test mix do deps.get
 script:
-    - mix test
+    - MIX_ENV=test mix test
