--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ otp_release:
     - R16B03-1
 
 before_install:
-    - git clone git://github.com/elixir-lang/elixir --depth 1
-    - make -C elixir
+    - git clone git://github.com/elixir-lang/elixir
+    - cd elixir && make && cd ..
 
 before_script:
     - "export PATH=`pwd`/elixir/bin:$PATH"
