--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,11 @@ language: erlang
 
 otp_release:
     - R16B03-1
-
 before_install:
     - git clone git://github.com/elixir-lang/elixir
     - cd elixir && make && cd ..
-
 before_script:
-    - "export PATH=`pwd`/elixir/bin:$PATH"
+    - export PATH=`pwd`/elixir/bin:$PATH
     - MIX_ENV=test mix do deps.get
 script:
     - MIX_ENV=test mix test
