--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ before_script:
     - export PATH=`pwd`/elixir/bin:$PATH
     - MIX_ENV=test mix do deps.get
 script:
-    - MIX_ENV=test mix test
+    - MIX_ENV=test mix amrita
