--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,10 @@ language: erlang
 otp_release:
     - R16B02
 before_install:
-    - wget -c https://github.com/elixir-lang/elixir/archive/v0.12.5.tar.gz
-    - tar -xvzf v0.12.5.tar.gz
-    - cd elixir-0.12.5 && make && cd ..
+    - git clone https://github.com/elixir-lang/elixir
+    - cd elixir && git checkout v0.12.5 && make && cd ..
 before_script:
-    - export PATH=`pwd`/elixir-0.12.5/bin:$PATH
+    - export PATH=`pwd`/elixir/bin:$PATH
     - MIX_ENV=test mix do deps.get
     - MIX_ENV=test mix do deps.compile
 script:
