--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,7 @@
-language: erlang
-otp_release:
-    - 17.0
-before_install:
-    - git clone https://github.com/elixir-lang/elixir
-    - cd elixir && git checkout v0.13 && make && cd ..
-before_script:
-    - export PATH=`pwd`/elixir/bin:$PATH
-    - MIX_ENV=test mix do deps.get
-    - MIX_ENV=test mix do deps.update --all
-    - MIX_ENV=test mix do deps.compile
-    - MIX_ENV=test mix do deps.compile meck
+install:
+  - wget http://packages.erlang-solutions.com/erlang-solutions_1.0_all.deb
+  - sudo dpkg -i erlang-solutions_1.0_all.deb
+  - sudo apt-get update
+  - sudo apt-get install erlang
 script:
-    - MIX_ENV=test mix amrita --trace
+    "make ci"
