re #18 adding Makefile (stealing from Amrita), to lessen the pain of travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ install:
   - wget http://packages.erlang-solutions.com/erlang-solutions_1.0_all.deb
   - sudo dpkg -i erlang-solutions_1.0_all.deb
   - sudo apt-get update
-  - sudo apt-get install erlang
+  - sudo apt-get -y install erlang
 script:
     "make ci"
