--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 install:
   - wget http://packages.erlang-solutions.com/erlang-solutions_1.0_all.deb
   - sudo dpkg -i erlang-solutions_1.0_all.deb
+  - echo "deb http://us.archive.ubuntu.com/ubuntu raring main universe" >> /etc/apt/sources.list
   - sudo apt-get update
   - sudo apt-get -y install erlang rebar
 script:
