--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 install:
   - wget http://packages.erlang-solutions.com/erlang-solutions_1.0_all.deb
   - sudo dpkg -i erlang-solutions_1.0_all.deb
-  - echo "deb http://us.archive.ubuntu.com/ubuntu raring main universe" >> /etc/apt/sources.list
+  - git clone git://github.com/rebar/rebar.git
+  - cd rebar && ./bootstrap
+  - export PATH=$PATH:`pwd`
   - sudo apt-get update
-  - sudo apt-get -y install erlang rebar
+  - sudo apt-get -y install erlang
 script:
     "make ci"
