--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ install:
   - sudo dpkg -i erlang-solutions_1.0_all.deb
   - git clone git://github.com/rebar/rebar.git
   - cd rebar && ./bootstrap
-  - export PATH=$PATH:`pwd`
+  - export PATH=$PATH:`pwd` && cd ..
   - sudo apt-get update
   - sudo apt-get -y install erlang
 script:
