--- a/wercker.yml
+++ b/wercker.yml
@@ -9,6 +9,7 @@ build:
       - script:
           name: Installing zip
           code: |
+            sudo apt-get update
             sudo apt-get install zip
 
       # Build the project
