--- a/wercker.yml
+++ b/wercker.yml
@@ -1,27 +1,16 @@
 box: bitwalker/elixir@0.0.10
 build:
   steps:
-      - script:
-          name: set env vars
-          code: export MIX_ENV=test
 
-      # Gets the dependencies
+      # Installing OS dependencies
       - script:
-          name: Installing zip
+          name: Installing Ubuntu zip
           code: |
             sudo apt-get update
             sudo apt-get install zip
 
-      # Build the project
-      #- script:
-       #   name: mix compile
-        #  code: |
-         #   MIX_ENV=test mix deps.update amrita
-          #  MIX_ENV=test mix compile amrita            
-           # MIX_ENV=test mix compile
-
-      # Test the project
+      # Test the project. Thanks to the makefile this can just be very short.
       - script:
           name: Test
           code: |
-            MIX_ENV=test make ci
+            make ci
