--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,6 @@
 dependencies:
   pre:
-    - apt-get install erlang, rebar
+    - sudo apt-get install erlang, rebar
   cache_directories:
     - otp_src_17.0
     - elixir
