ENH Adding hooks in .travis.yml sending data to inch

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,6 @@ install:
   - sudo apt-get -y install erlang
 script:
     "make ci"
+after_script:
+  - MIX_ENV=docs mix deps.get
+  - MIX_ENV=docs mix inch.report
