--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ install:
   - git clone git://github.com/rebar/rebar.git
   - cd rebar && ./bootstrap
   - export PATH=$PATH:`pwd` && cd ..
-  - sudo apt-get update
-  - sudo apt-get -y install erlang
+#  - sudo apt-get update
+#  - sudo apt-get -y install erlang
 script:
     "make ci"
 after_script:
