Make circleci report to inchci too.

--- a/circle.yml
+++ b/circle.yml
@@ -6,7 +6,9 @@ dependencies:
     - ~/.mix
     - _build
     - deps
-
 test:
   override:
     - script/circleci/test.sh
+  post:
+    - mix deps.get --only docs
+    - MIX_ENV=docs mix inch.report
