--- a/circle.yml
+++ b/circle.yml
@@ -10,5 +10,7 @@ test:
   override:
     - script/circleci/test.sh
   post:
+    - export MIX_ENV="docs"
+    - export PATH="$HOME/dependencies/erlang/bin:$HOME/dependencies/elixir/bin:$PATH"
     - mix deps.get --only docs
-    - MIX_ENV=docs mix inch.report
+    - mix inch.report
