--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# -*- mode: gitignore; -*-
 /_build
 /deps
 erl_crash.dump
@@ -6,3 +7,34 @@ erl_crash.dump
 mix.lock
 vendor
 precompiled.zip
+*~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+*.elc
+auto-save-list
+tramp
+.\#*
+
+# Org-mode
+.org-id-locations
+*_archive
+
+# flymake-mode
+*_flymake.*
+
+# eshell files
+/eshell/history
+/eshell/lastdir
+
+# elpa packages
+/elpa/
+
+# reftex files
+*.rel
+
+# AUCTeX auto folder
+/auto/
+
+# cask packages
+.cask/
