--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-language: erlang
+language: elixir
 otp_release: 
   - 17.4
 before_install:
@@ -8,6 +8,7 @@ before_script:
   - export PATH=`pwd`/elixir/bin:$PATH
 cache:
    directories:
+     - deps
      - $HOME/vendor/elixir
 install:
   - git clone git://github.com/rebar/rebar.git
