--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
-language: erlang
+language: elixir
+elixir:
+  - 1.0.3
+  - 1.0.4
 otp_release: 
   - 17.4
 before_install:
@@ -8,6 +11,7 @@ before_script:
   - export PATH=`pwd`/elixir/bin:$PATH
 cache:
    directories:
+     - deps
      - $HOME/vendor/elixir
 install:
   - git clone git://github.com/rebar/rebar.git
