Using amrita instead of make ci which will download elixir again

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,8 @@ install:
   - cd rebar && ./bootstrap
   - export PATH=$PATH:`pwd` && cd ..
 script:
-    "make ci"
+  - MIX_ENV=test mix deps.get
+  - MIX_ENV=test mix amrita --trace
 after_script:
   - mix deps.get --only docs
   - MIX_ENV=docs mix inch.report
