--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ elixir:
 otp_release:
   - 17.3
   - 17.4
+# Unfortunately this can't be enabled. If enabled kiex will fail periodically.
 # sudo: false # according to ecto and plug project will go faster by using containers
 cache:
    directories:
