--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
 language: elixir
 elixir:
   - 1.0.5
-  - 1.1.0
 otp_release:
-  - 17.3
-  - 17.4
+  - 17.5
+  - 18.0
 # sudo: false # according to ecto and plug project will go faster by using containers
 cache:
    directories:
@@ -16,3 +15,7 @@ after_script:
 after_success:
   - MIX_ENV=test mix deps.get
   - MIX_ENV=test mix coveralls.travis
+matrix:
+  exclude:
+  - elixir: 1.1.1
+    otp_release: 17.5
