Added another cache directory to .travis.yml following this: https://dockyard.com/blog/2015/12/02/speeding-up-elixir-project-build-times-on-travis-ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ otp_release:
 sudo: false # according to ecto and plug project will go faster by using containers
 cache:
    directories:
+     - _build
      - deps
      - $HOME/vendor/elixir
 after_script:
