--- a/circle.yml
+++ b/circle.yml
@@ -4,19 +4,19 @@ machine:
 
 dependencies:
   pre:
-    - script/circleci/prepare.sh
-  cache_directories:
-    - ~/.asdf
-    - ~/dependencies
-    - ~/.mix
-    - _build
-    - deps
+    # - script/circleci/prepare.sh
     - if ! asdf | grep version; then git clone https://github.com/HashNuke/asdf.git ~/.asdf; fi
     - asdf plugin-add erlang https://github.com/HashNuke/asdf-erlang.git
     - asdf plugin-add elixir https://github.com/HashNuke/asdf-elixir.git
     - erlang_version=$(awk '/erlang/ { print $2 }' .tool-versions) && asdf install erlang ${erlang_version}
     - elixir_version=$(awk '/elixir/ { print $2 }' .tool-versions) && asdf install elixir ${elixir_version}
     - yes | mix deps.get
+  cache_directories:
+    - ~/.asdf
+    - ~/dependencies
+    - ~/.mix
+    - _build
+    - deps
 test:
   override:
     # - script/circleci/test.sh
