--- a/circle.yml
+++ b/circle.yml
@@ -9,11 +9,12 @@ dependencies:
     - asdf plugin-add erlang https://github.com/HashNuke/asdf-erlang.git
     # - asdf plugin-add elixir https://github.com/HashNuke/asdf-elixir.git
     - asdf plugin-add elixir https://github.com/asdf-vm/asdf-elixir.git
-    # - erlang_version=$(awk '/erlang/ { print $2 }' .tool-versions) && asdf install erlang ${erlang_version}
-    - erlang_version=18.0 && asdf install erlang ${erlang_version}
-    # - elixir_version=$(awk '/elixir/ { print $2 }' .tool-versions) && asdf install elixir ${elixir_version}
-    - elixir_version=1.3.4 && asdf install elixir ${elixir_version}
-    - yes | mix deps.get
+    - erlang_version=$(awk '/erlang/ { print $2 }' .tool-versions) && asdf install erlang ${erlang_version}
+    # - erlang_version=18.0 && asdf install erlang ${erlang_version}
+    - elixir_version=$(awk '/elixir/ { print $2 }' .tool-versions) && asdf install elixir ${elixir_version}
+    # - elixir_version=1.3.4 && asdf install elixir ${elixir_version}
+    - mix local.rebar --force
+    - yes | MIX_ENV=test mix deps.get
   cache_directories:
     - ~/.asdf
     - ~/dependencies
