--- a/circle.yml
+++ b/circle.yml
@@ -1,20 +1,27 @@
 machine:
   environment:
     PATH: "$HOME/.asdf/bin:$HOME/.asdf/shims:$PATH"
+    ERLANG_VERSION: "18.2.1"
+    ELIXIR_VERSION: "1.3.3"
 
 dependencies:
   pre:
     # - script/circleci/prepare.sh
     - if ! asdf | grep version; then git clone https://github.com/HashNuke/asdf.git ~/.asdf; fi
-    - asdf plugin-add erlang https://github.com/HashNuke/asdf-erlang.git
+    # - asdf plugin-add erlang https://github.com/HashNuke/asdf-erlang.git
     # - asdf plugin-add elixir https://github.com/HashNuke/asdf-elixir.git
-    - asdf plugin-add elixir https://github.com/asdf-vm/asdf-elixir.git
-    - erlang_version=$(awk '/erlang/ { print $2 }' .tool-versions) && asdf install erlang ${erlang_version}
+    # - asdf plugin-add elixir https://github.com/asdf-vm/asdf-elixir.git
+    - asdf plugin-add erlang https://github.com/HashNuke/asdf-erlang.git || echo okay...
+    - asdf plugin-add elixir https://github.com/HashNuke/asdf-elixir.git || echo okay...
+    # - erlang_version=$(awk '/erlang/ { print $2 }' .tool-versions) && asdf install erlang ${erlang_version}
     # - erlang_version=18.0 && asdf install erlang ${erlang_version}
-    - elixir_version=$(awk '/elixir/ { print $2 }' .tool-versions) && asdf install elixir ${elixir_version}
+    # - elixir_version=$(awk '/elixir/ { print $2 }' .tool-versions) && asdf install elixir ${elixir_version}
     # - elixir_version=1.3.4 && asdf install elixir ${elixir_version}
-    - mix local.rebar --force
-    - yes | MIX_ENV=test mix deps.get
+    # - mix local.rebar --force
+    # - yes | MIX_ENV=test mix deps.get
+    - echo -e "erlang $ERLANG_VERSION\nelixir $ELIXIR_VERSION\n" > .tool-versions
+    - asdf install
+    - MIX_ENV=test mix do local.hex --force, hex.info, local.rebar --force, deps.get, deps.compile
   cache_directories:
     - ~/.asdf
     - ~/dependencies
