--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,8 @@ language: elixir
 env:
   - MIX_ENV=test
 elixir:
-  - 1.0.5
-  - 1.1.0
+  - 1.3.3
 otp_release:
-  - 17.5
   - 18.0
 sudo: false # according to ecto and plug project will go faster by using containers
 cache:
@@ -13,6 +11,11 @@ cache:
      - _build
      - deps
      - $HOME/vendor/elixir
+install:
+     - mix local.hex --force
+     - mix local.rebar --force
+script:
+     - mix test
 after_script:
   - mix deps.get --only docs
   - MIX_ENV=docs mix inch.report
