--- a/wercker.yml
+++ b/wercker.yml
@@ -20,8 +20,8 @@ build:
           name: Get Depedencies
           code: |
             cd $WERCKER_SOURCE_DIR
-            mix deps.get --all
-            mix deps.compile --all
+            yes | mix deps.get --all
+            yes | mix deps.compile --all
             
       # Run the test
       - script:
