--- a/wercker.yml
+++ b/wercker.yml
@@ -20,7 +20,8 @@ build:
           name: Get Depedencies
           code: |
             cd $WERCKER_SOURCE_DIR
-            yes | mix deps.get, deps.compile --all
+            yes | mix deps.get
+            yes | mix deps.compile --all
             
       # Run the test
       - script:
