--- a/wercker.yml
+++ b/wercker.yml
@@ -1,4 +1,4 @@
-box: elixir/elixir
+box: ubuntu
 build:
   steps:
 
@@ -8,6 +8,21 @@ build:
           code: |
             sudo apt-get update
             sudo apt-get install zip
+            
+      - script:
+          name: Adding Erlang repo
+          code: |
+            wget https://packages.erlang-solutions.com/erlang-solutions_1.0_all.deb && sudo dpkg -i erlang-solutions_1.0_all.deb
+            
+      - script: 
+          name: Install esl Erlang
+          code: |
+            sudo apt-get update && sudo apt-get install esl-erlang
+            
+      - script:
+          name: Install Elixir
+          code: |
+            sudo apt-get install elixir
             
       # Setting Environmental variables\
       - script:
