Adding credo to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,5 @@ after_script:
   - mix deps.get --only docs
   - MIX_ENV=docs mix inch.report
 after_success:
-  - MIX_ENV=test mix deps.get
+  - MIX_ENV=test mix deps.get && mix credo
   - MIX_ENV=test mix coveralls.travis
